# projekttage_yew

./: Cargo.toml  Trunk.toml  build.sh  index.html  manifest.webmanifest  package-lock.json  package.json  service-worker.js  style.css  tailwind.config.js
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml  tailwind.yml
src/: main.rs  solver.rs
src-tauri/: tauri.conf.json
src/components/: mod.rs  tabelle.rs
src/seiten/: einteilung.rs  home.rs  mod.rs  projekte.rs  schueler.rs
src/types/: klasse.rs  mod.rs  save_file.rs  schueler_file.rs  schueler_liste_file.rs
src/types/id/: mod.rs  projekt_id.rs  schueler_id.rs
