[package]
name = "projekttage_yew"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-file = "0.3.0"
gloo-storage = "0.3.0"
good_lp = { version = "1.13.0", default-features = false, features = [
    "microlp",
] }
regex = "1.11.1"
serde = "1.0.219"
serde-value = "0.7.0"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
unicode-normalization = "0.1.24"
uuid = { version = "1.17.0", features = ["serde"] }
web-sys = { version = "0.3.77", features = ["HtmlAnchorElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-custom-components = { version = "0.2.2", features = [
    "table",
    "tabs",
    "pagination",
] }
yew-router = "0.18.0"
